# pytest-parametrize-cases

./: .flake8  .python-version  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
src/pytest_parametrize_cases/: __init__.py  case.py
tests/: test_case.py
