[tool.poetry]
name = "pytest-parametrize-cases"
version = "0.1.1"
description = "A more user-friendly way to write parametrized tests."
authors = ["Cameron Pinnegar <cameron.pinnegar@gmail.com>"]
# include = ["src/pytest_parametrize_cases/py.typed"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"
flake8 = "^3.8.4"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.11.1"
mypy = "^0.790"
flake8-docstrings = "^1.5.0"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["pytest_parametrize_cases"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
